# NolqsDB

./: .gitignore  .gitmodules  README.md
groundupdb/: CMakeLists.txt
groundupdb/groundupdb/: CMakeLists.txt
groundupdb/groundupdb-cli/: CMakeLists.txt
groundupdb/groundupdb-cli/Sources/: main.cpp
groundupdb/groundupdb-tests/: CMakeLists.txt
groundupdb/groundupdb-tests/Headers/: tests.h
groundupdb/groundupdb-tests/Sources/: dbmanagement-tests.cpp  keyvalue-tests.cpp
groundupdb/groundupdb/Headers/: database.h  groundupdb.h
groundupdb/groundupdb/Headers/include/: database.h  groundupdb.h
groundupdb/groundupdb/Headers/include/extensions/: extdatabase.h
groundupdb/groundupdb/Sources/: database.cpp  groundupdb.cpp
